<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FallDetector</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sessionText">SESSION</string>
    <string name="btnMoreDsc">Click for more details</string>
    <string name="fallText">Falls</string>
    <string name="startText">Sarted:</string>
    <string name="durationText">Duration:</string>
    <string name="endText">Ended:</string>
    <string name="title_activity_fall_event">Fall</string>
    <string name="fallNumber">FALL</string>
    <string name="fallDate">Date:</string>
    <string name="fallTime">Time:</string>
    <string name="fallLongitude">Longitude:</string>
    <string name="fallLocationString">Location:</string>
    <string name="whenFallHappens">WHEN:</string>
    <string name="fallLocation">WHERE:</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="stop">Stop</string>
    <string name="details">Details</string>
    <string name="pref_acc">Accelerometer Sample Rate</string>
    <string name="pref_acc_sum">Set the sample rate of the accelerometer</string>
    <string name="session_pref">SESSION OPTIONS</string>
    <string name="pref_session_time">Session Duration</string>
    <string name="pref_session_time_sum">Set the maximum duration of a session</string>
    <string name="pref_contact_setting">CONTACTS</string>
    <string name="newSession">NEW SESSION</string>
    <string name="renameSession">RENAME SESSION</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="hintSession">Session Name</string>
    <string name="fallImageDescriptor">Thumbnail Image</string>
    <string name="pauseButtonDescriptor">Pause Button</string>
    <string name="playButtonDescriptor">Play Button</string>
    <string name="pref_contact_list">Add a new contact</string>
    <string name="pref_contact_list_sum">Add a new helper e-mail address</string>
    <string name="pref_contact_management">Choose the helpers</string>
    <string name="pref_contact_management_sum">Add as a helper from your contacts list</string>
    <string name="pref_notification_setting">NOTIFICATION</string>
    <string name="title_activity_fall_detector_preferences">Settings</string>
    <string name="error">An error occurred</string>
    <string name="errorEmptyName">Session name must be set!</string>
    <string name="inExecution">In execution…</string>
    <string name="pref_alarm_time">Set Alarm Time</string>
    <string name="pref_notification_enable">Enable notification</string>
    <string name="pref_ringtone">Ringtone</string>
    <string name="btnGraphDsc">Graph Viewer</string>
    <string name="atText">at:</string>
    <string name="nameLbl">Name:</string>
    <string name="Play">Play</string>
    <string name="title_activity_session_details">SessionDetails</string>
    <string name="notification_title">Start a New Session</string>
    <string name="notification_text">Touch to begin a new session</string>
    <string name="notification_started">New session has been started</string>
    <string name="add_contact">Add a new contact</string>
    <string name="set_name">name</string>
    <string name="set_surname">surname</string>
    <string name="set_mail">e-mail</string>
    <string name="set_priority">Priority</string>
    <string name="add">Add</string>
    <string name="toStart">Press play to start</string>
    <string name="title_activity_send_email">SendEmail</string>
    <string name="HelpMessage">Please help me,\nI fell at -Hour-\nin -location-</string> 
    <string name="to">TO</string>
    <string name="message">Message</string>
    <string name="Cc">Cc</string>
    <string name="Bcc">Bcc</string>
    <string name="Sbj">Subject</string>
    <string name="Title">Email Sender</string>
    <string name="sendBtn">Send</string>
    <string name="acc_graph">Accelerometer Data Graph</string>
    <string name="emptyString"></string>
    <string name="thumbnail">Thumbnail Image</string>

</resources>
