<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="unipd.dei.ESP1415.falldetector.SendEmail" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editTextSubject"
        android:layout_alignStart="@+id/editTextSubject"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/to" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextCc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextTo"
        android:layout_alignStart="@+id/editTextTo"
        android:layout_below="@+id/editTextTo"
        android:ems="10"
        android:hint="@string/Cc" />

    <EditText
        android:id="@+id/editTextBcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextCc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/Bcc" />

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextBcc"
        android:layout_alignStart="@+id/editTextBcc"
        android:layout_below="@+id/editTextBcc"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/Sbj" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSubject"
        android:layout_alignStart="@+id/editTextSubject"
        android:layout_below="@+id/editTextSubject"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/HelpMessage"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/sendBtn" />

</RelativeLayout>