<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/newSessionImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/fallImageDescriptor"
        android:src="@drawable/ic_fall" />

    <EditText
        android:id="@+id/newSessionName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignBaseline="@+id/newSessionImage"
        android:layout_toEndOf="@+id/newSessionImage"
        android:layout_toRightOf="@+id/newSessionImage"
        android:hint="@string/hintSession"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </EditText>

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/newSessionImage"
        android:text="@string/ok"
        android:width="150dp" />

    <Button
        android:id="@+id/dialogButtonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dialogButtonOK"
        android:layout_below="@+id/newSessionName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/cancel"
        android:width="150dp" />

</RelativeLayout>