<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/courrentSessionImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/fallImageDescriptor"
            android:src="@drawable/ic_fall" />

        <TextView
            android:id="@+id/CourrentSessionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/courrentSessionImage"
            android:layout_toRightOf="@+id/courrentSessionImage"
            android:text="@string/sessionText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/showGraphButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/btnGraphDsc"
            android:src="@drawable/graph_launcher" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/StartDateView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/startText"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/startDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/StartDateView"
            android:layout_toRightOf="@+id/StartDateView" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/nameLbl"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/newSessionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/nameLabel"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/nameLabel"
            android:layout_toRightOf="@+id/nameLabel"
            android:enabled="false"
            android:hint="@string/hintSession"
            android:lines="1"
            android:maxLength="20"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </EditText>

        <ImageView
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/newSessionName"
            android:layout_toRightOf="@+id/newSessionName"
            android:src="@drawable/ic_action_edit" />

        <ImageView
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@+id/newSessionName"
            android:layout_toRightOf="@+id/newSessionName"
            android:src="@drawable/ic_action_accept"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/courrentSessionBtnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/delete"
            android:width="150dp" />

        <Button
            android:id="@+id/courrentSessionBtStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/courrentSessionBtDelete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/Play"
            android:width="150dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/sessionListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>
    </RelativeLayout>

</LinearLayout>